--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,6 +1,5 @@
 .root {
  width: 100%;
- height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
@@ -16,10 +15,16 @@
 }
 .todo-item {
   width: 100%;
+  height: auto;
+  min-height: 100px;
   display: flex;
-  flex-direction: row;
-  font-size: x-large;
-  justify-content: flex-end;
+  flex-direction: column;
+  font-size: large;
+  background-color: forestgreen;
+  justify-content: flex-start;
+  padding: 20px 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 .todo-item p {
   font-size: 18px;
@@ -29,4 +34,31 @@
 .todo-item input {
   transform: scale(1.5);
   margin-right: 10px;
+}
+ 
+.todo-list-remove {
+  background-color: red;
+  width: 80px;
+  border: none;
+  color: white;
+  height: 30px;
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
+  cursor: pointer;
+  padding: 0px 10px;
+}
+.todo-item-false {
+  background-color: #C0392B ;
+  border-radius: 10px;
+  padding: 20px 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.form-unit {
+  display: flex;
+  width: 70%;
+  justify-content: space-around;
+  align-items: flex-start;
 }
