--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800;900&display=swap");
 
 html {
-  font-family: 'Poppins', sans-serif;
-
+  font-family: "Poppins", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #2E4053;
+    background-color: #2e4053;
     color: white;
   }
 }
@@ -15,6 +14,28 @@ html {
   body {
     background-color: white;
     color: black;
+  }
+  form input {
+    background-color: white !important;
+    border: 0.4px solid #85929e;
+    border-radius: 5px;
+    color: #2e4053 !important;
+    font-weight: 600;
+  }
+  form textarea {
+    background-color: white !important;
+    border: 0.4px solid #85929e;
+    border-radius: 5px;
+    color: #2e4053 !important;
+    padding: 10px;
+  }
+  form button {
+    background-color: white !important;
+    border: 0.4px solid #85929e;
+    border-radius: 5px;
+    color: #2e4053 !important;
+    font-weight: bold;
+    padding: 10px 0px;
   }
 }
 
@@ -30,20 +51,20 @@ form {
 }
 
 form input {
-  font-family: 'Poppins', sans-serif;
-  background-color: #2E4053;
-  border: .4px solid #85929E;
+  font-family: "Poppins", sans-serif;
+  background-color: #2e4053;
+  border: 0.4px solid #85929e;
   border-radius: 5px;
   color: white;
-  padding: 10px;}
-form textarea{
-  background-color: #2E4053;
-  border: .4px solid #85929E;
+  padding: 10px;
+}
+form textarea {
+  background-color: #2e4053;
+  border: 0.4px solid #85929e;
   border-radius: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: white;
   padding: 10px;
-
 }
 form input:focus {
   outline: none;
@@ -54,10 +75,10 @@ form textarea:focus {
 }
 
 form button {
-  border:1px solid #85929E;
-  background-color: #2E4053;
+  border: 1px solid #85929e;
+  background-color: #2e4053;
   border-radius: 5px;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 10px 0px;
 }
